force-app/main/default/objects/BTN_Equipment_Request__c/BTN_Equipment_Request__c.object-meta.xml
<CustomObject>
    <label>Equipment Request</label>
    <nameField>
        <displayFormat>ER{000000}</displayFormat>
        <label>Equipment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>