force-app/main/default/objects/BTN_Equipment_Request__c/fields/Contact_Email_frm__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_frm__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>