force-app/main/default/objects/BTN_Equipment_Request__c/fields/Contact_Name_frm__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_frm__c</fullName>
    <formula>Contact__r.Name_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>