force-app/main/default/objects/BTN_Equipment_Request__c/fields/Contact_Personal_Email_frm__c.field-meta.xml
<CustomField>
    <fullName>Contact_Personal_Email_frm__c</fullName>
    <formula>Contact__r.PersonalEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Personal Email</label>
    <type>Text</type>
</CustomField>