force-app/main/default/objects/BTN_Equipment_Request__c/fields/Contact_Position_frm__c.field-meta.xml
<CustomField>
    <fullName>Contact_Position_frm__c</fullName>
    <formula>Contact__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Position</label>
    <type>Text</type>
</CustomField>