force-app/main/default/objects/BTN_Equipment_Request__c/fields/Location_frm__c.field-meta.xml
<CustomField>
    <fullName>Location_frm__c</fullName>
    <formula>Contact__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>