force-app/main/default/objects/BTN_Equipment_Request__c/fields/Ready__c.field-meta.xml
<CustomField>
    <fullName>Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Czy całe zamówienie zostało skompletowane?</description>
    <label>Ready</label>
    <type>Checkbox</type>
</CustomField>