force-app/main/default/objects/BTN_Equipment_Request__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Equipment Requests</relationshipLabel>
    <relationshipName>Equipment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>