force-app/main/default/objects/BTN_Equipment_Request__c/fields/Work_Start_Date_frm__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Date_frm__c</fullName>
    <formula>Source_Case__r.WorkStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>