force-app/main/default/objects/BTN_Equipment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Requested_Equipment__c</columns>
    <columns>Requested_Equipment_Comments__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location_frm__c</columns>
    <columns>Ready__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>