force-app/main/default/objects/BTN_Equipment_Request__c/listViews/Ready_Equipment_Requests.listView-meta.xml
<ListView>
    <fullName>Ready_Equipment_Requests</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Requested_Equipment__c</columns>
    <columns>Requested_Equipment_Comments__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location_frm__c</columns>
    <columns>Ready__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Gotowe</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>